infra/eks-rails/kubernetes/rails-app/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-app
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:REPLACE_YOUR_AWS_ACCOUNT_ID:certificate/b0925f08-611f-4f6c-8580-f35fd6a64690
    external-dns.alpha.kubernetes.io/hostname: eks.danimal141.com
    # alb.ingress.kubernetes.io/load-balancer-attributes:
